kubernetes/apps/non-cluster-services/adguard/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard
spec:
  parentRefs:
  - name: internal
    namespace: kube-system
    sectionName: domain-5-subdomain-https
  hostnames:
  - "adguard.${DOMAIN_5}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: adguard
      port: 80
